--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,7 @@ cinder/
 *.mov
 *.jpg
 *.png
-<<<<<<< HEAD
 
-=======
->>>>>>> master
 # User-specific files
 *.suo
 *.user
@@ -159,6 +156,7 @@ $RECYCLE.BIN/
 # Mac crap
 .DS_Store
 ._.DS_Store
+Main_Application/
 
 
 # Xcode
