--- a/samples/ScrollviewSample/vc11/ScrollviewSample.vcxproj.filters
+++ b/samples/ScrollviewSample/vc11/ScrollviewSample.vcxproj.filters
@@ -216,7 +216,7 @@
     <ClCompile Include="..\..\..\src\modules\TouchObjects\ScrollView\ScrollView.cpp">
       <Filter>Blocks\Touch\src\modules\TouchObjects\ScrollView</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\modules\TouchObjects\ScrollView\ScrollViewSection.cpp">
+    <ClCompile Include="..\..\..\src\modules\TouchObjects\ScrollView\ScrollViewCell.cpp">
       <Filter>Blocks\Touch\src\modules\TouchObjects\ScrollView</Filter>
     </ClCompile>
   </ItemGroup>
@@ -227,7 +227,7 @@
     <ClInclude Include="..\..\..\src\modules\TouchObjects\ScrollView\ScrollView.h">
       <Filter>Blocks\Touch\src\modules\TouchObjects\ScrollView</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\src\modules\TouchObjects\ScrollView\ScrollViewSection.h">
+    <ClInclude Include="..\..\..\src\modules\TouchObjects\ScrollView\ScrollViewCell.h">
       <Filter>Blocks\Touch\src\modules\TouchObjects\ScrollView</Filter>
     </ClInclude>
   </ItemGroup>
